<resources>
    <string name="app_name">Simpling</string>
    <string name="str_personal_tax">个税</string>
    <string name="str_mortgage">房贷</string>
    <string name="str_pre_tax_amount_tag">税前收入(元)</string>
    <string name="str_tax_input_hint">请输入税前收入</string>
    <string name="str_monthly_salary">月薪</string>
    <string name="str_year_end_awards">年终奖</string>
    <string name="str_location_city">所在地</string>
    <string name="str_default_city">上海</string>
    <string name="str_tax_base">起征点</string>
    <string name="str_default_tax_base">5000</string>
    <string name="str_calculation">开始计算</string>
    <string name="str_person_insurance">五险一金</string>
    <string name="str_provident_fund">公积金</string>
    <string name="str_medical_insurance">医疗</string>
    <string name="str_pension">养老</string>
    <string name="str_unemployment_insurance">失业</string>
    <string name="str_work_injury_insurance">工伤</string>
    <string name="str_maternity_insurance">生育</string>
    <string name="str_after_tax_label">到手所得</string>
    <string name="str_before_tax_label">税前收入</string>
    <string name="str_personal_tax_label">个人所得税</string>
    <string name="str_insurance_sum_label">五险一金总计</string>
    <string name="str_cny">%s元</string>
    <string name="month_list">月薪清单</string>
    <string name="year_list">年终奖清单</string>
    <string name="str_location_label">所在城市</string>
    <string name="str_update">更新提示</string>
    <string name="str_install">安装</string>
    <string name="str_cancel">取消</string>
    <string name="str_update_desc">有新版本更新</string>
    <string name="str_search_hint">搜索商品名称</string>
    <string name="str_search_transition">Search</string>
    <string name="str_monthly_volume">月销%d</string>
    <string name="str_delete_alert">确认删除改历史记录？</string>
    <string name="str_confirm">确认</string>
    <string name="str_home">首页</string>
    <string name="str_mine">我的</string>
    <string name="str_featured">精选</string>
    <string name="str_login_with_taobao">淘宝登录</string>
    <string name="str_retry">重试</string>
    <string name="str_orders">我的订单</string>
    <string name="str_search">搜索</string>
    <string name="str_linear_mode">列表模式</string>
    <string name="str_grid_mode">网格模式</string>
    <string name="str_volume_format">月售%d</string>
    <string name="str_volume_amount_format">%s元券</string>
    <string name="str_coupon_label">用券后</string>
    <string name="str_final_price">￥%s</string>
    <string name="str_now_price">现价￥%s</string>
</resources>
