<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nsv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <LinearLayout
                android:id="@+id/top_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:background="@drawable/tax_indicator_bg"
                android:elevation="2dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ctv_personal_tax"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tax_text_left_selector"
                    android:button="@null"
                    android:checked="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/str_personal_tax"
                    android:textColor="@color/tax_loan_text_color" />

                <CheckBox
                    android:id="@+id/ctv_mortgage"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tax_text_right_selector"
                    android:button="@null"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingLeft="24dp"
                    android:paddingTop="5dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="5dp"
                    android:text="@string/str_mortgage"
                    android:textColor="@color/tax_loan_text_color" />

            </LinearLayout>

            <include
                layout="@layout/personal_tax_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_indicator" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


    <Button
        android:id="@+id/btn_calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/calculation_selector"
        android:text="@string/str_calculation"
        android:textColor="@android:color/white" />
</RelativeLayout>